test/files/neg/t7110.scala
object Test {
  try { ??? } // warn

  try { ??? } finally ??? // no warn
  try { ??? } catch { case _: Throwable => } // no warn
}
